Bug 17254 - latest radeon commit from michael danzer breaks xv output
Summary: latest radeon commit from michael danzer breaks xv output
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: NEEDINFO
Depends on:
Blocks:
 
Reported: 2008-08-21 13:33 UTC by Paulo Dias
Modified: 2008-09-30 03:32 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
xorg.log (82.80 KB, text/plain)
2008-08-21 14:58 UTC, Paulo Dias
no flags Details
xorg.conf (2.52 KB, text/plain)
2008-08-21 14:59 UTC, Paulo Dias
no flags Details
Pass base offset into RADEONDisplayVideo() explicitly (3.78 KB, patch)
2008-08-22 01:57 UTC, Michel Dänzer
no flags Details | Splinter Review

Description Paulo Dias 2008-08-21 13:33:53 UTC
the commit from michael danzer (a55e85f742d1334bf88e4681e553f025d2de38df)breaks the xv output, (a lot of rgb lines, green,red, blended into the movie), reverting back to92ee21df344a989778e37369c7beb3904a00ead6 fixes the problem.
Comment 1 Alex Deucher 2008-08-21 14:45:20 UTC
Please attach your xorg log and config.
Comment 2 Paulo Dias 2008-08-21 14:58:29 UTC
Created attachment 18459 [details]
xorg.log
Comment 3 Paulo Dias 2008-08-21 14:59:27 UTC
Created attachment 18460 [details]
xorg.conf
Comment 4 Paulo Dias 2008-08-21 14:59:58 UTC
this bug is very similar in behaviour to bug 16845
	

Comment 5 Paulo Dias 2008-08-21 15:01:57 UTC
similar but not quitte the same. i can see the video, but with odd colors mixed with it, with all players using Xv.. if i use textured video, the video plays without the garbled colors
Comment 6 Michel Dänzer 2008-08-22 00:27:58 UTC
Does it also happen without Option "BackingStore"?
Comment 7 Michel Dänzer 2008-08-22 01:57:44 UTC
Created attachment 18462 [details] [review]
Pass base offset into RADEONDisplayVideo() explicitly

Does this patch fix the problem? If not, please attach a log file captured after reproducing the problem with the patch applied.
Comment 8 Paulo Dias 2008-08-25 14:29:34 UTC
ok, the patch fixes the bug, changing bug status to fixed.
Comment 9 Paulo Dias 2008-08-25 15:09:29 UTC
unfortunatelly with latest git code 6cebfe257f7ddad855ee743e4eb899bd6fac7f46, the bug appears OCASIONALLY with xv, reopening
Comment 10 Michel Dänzer 2008-08-26 12:47:05 UTC
(In reply to comment #8)
> ok, the patch fixes the bug, changing bug status to fixed.

That should only be done once the fix is applied to Git.


(In reply to comment #9)
> unfortunatelly with latest git code 6cebfe257f7ddad855ee743e4eb899bd6fac7f46,
> the bug appears OCASIONALLY with xv, reopening

With the patch applied on top of that commit?
Comment 11 Paulo Dias 2008-08-26 15:46:38 UTC
(In reply to comment #10)
> (In reply to comment #8)
> > ok, the patch fixes the bug, changing bug status to fixed.
> 
> That should only be done once the fix is applied to Git.

Yes, i updated to git and reapplied the patch. I thought the bug was fixed, unfortunately although is happens much less its STILL there.

Alex on IRC said it MIGHT be a memory allocation bug, and i tend to agree, since this bug can be triggered randomly in and out in the same X session .
> 
> 
> (In reply to comment #9)
> > unfortunatelly with latest git code 6cebfe257f7ddad855ee743e4eb899bd6fac7f46,
> > the bug appears OCASIONALLY with xv, reopening
> 
> With the patch applied on top of that commit?

Yes. Sorry for the closing and reopening, i should have done more tests (i should known better :P) before closing this bug.
Comment 12 Michel Dänzer 2008-08-29 00:29:25 UTC
(In reply to comment #11)
> 
> Alex on IRC said it MIGHT be a memory allocation bug, and i tend to agree,
> since this bug can be triggered randomly in and out in the same X session .

So the suspicion is it's a regression caused by Alex's patch bomb? :) If so, can you try the patch against commit a55e85f742d1334bf88e4681e553f025d2de38df?


Also, I was asking you to provide a log file captured after reproducing the problem with the patch applied.
Comment 13 Alex Deucher 2008-08-29 07:53:19 UTC
(In reply to comment #11)
> Alex on IRC said it MIGHT be a memory allocation bug, and i tend to agree,
> since this bug can be triggered randomly in and out in the same X session .

I didn't say it was a memory allocation bug, I said the corruption could be caused by having to reset the overlay base depending on where the allocation was.  That said, it does make sense to rule out my patches.
Comment 14 Paulo Dias 2008-09-25 14:09:17 UTC
with latest commit: d0d58b39e49c5ce00bc8bd12f721ad8c7f554b91
i cant reproduce this bug anymore. im not saying im 100% sure its gone, im just saying i cant seem to trigger it.

if no one else complains i think we can close it.

best regards
Comment 15 Michel Dänzer 2008-09-26 02:12:59 UTC
Is that still with the patch applied? I don't see anything in Git that could address this...
Comment 16 Paulo Dias 2008-09-26 16:50:13 UTC
Its without the patch, i think the problem was only active if you enabled the backing store (which leads to a series of other problems) :P
Comment 17 Tormod Volden 2008-09-27 15:11:47 UTC
With latest git (d82f2938...) I still see these coloured lines using XAA (EXA is fine). Last time I checked (see bug 16845) the patch here fixed the issue.
Comment 18 Michel Dänzer 2008-09-30 02:43:15 UTC
(In reply to comment #16)
> Its without the patch, i think the problem was only active if you enabled the
> backing store (which leads to a series of other problems) :P

That's unlikely to be directly related; you probably just got (un)lucky.

Anyway, I've pushed the patch as commit c359c2a31caf9f75b9fc6b6bcbc3e9dc1fe404ba, with the debugging output unconditional for now. Please don't reopen without attaching a log file captured after reproducing the problem with this fix.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.