Pass base offset into RADEONDisplayVideo() explicitly.

This prevents the base offset from flipping back and forth if double buffering
is enabled and the two buffers start on different sides of a 4 MB boundary.

Should fix http://bugs.freedesktop.org/show_bug.cgi?id=17254 ; please don't
reopen that bug report without attaching a log file captured after reproducing
the problem with this fix.